Implementación de control de ganancia automática
Ahora los sensores de corriente tiene un control automático de ganancia y el clock de datos del puerto paralelo tiene detección al flanco descendente.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ target_link_libraries(adc_dma_pico
         hardware_adc
         hardware_dma
         hardware_irq
+        hardware_spi
         )
 
 pico_add_extra_outputs(adc_dma_pico)
